[package]
name = "ewdenwing"
version = "0.3.0"
edition = "2024"

[features]
awmowed_cowe = []

[dependencies]
memchr = "2.7.6"
pelite = "0.10.0"
retour = { version = "0.3.1", features = ["static-detour"] }
simple_logger = "5.1.0"

[dependencies.log]
version = "0.4.29"
features = ["release_max_level_warn"]

[dependencies.uwuify]
git = "https://github.com/axd1x8a/uwu.git"
branch = "fixes"
version = "0.2.2"
features = ["ascii-only"]
default-features = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"
strip = true
